--- a/src/views/pages/logIn.html
+++ b/src/views/pages/logIn.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="../../views/styles/images/markus/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Markus LogIn</title>
+    <title>Log In</title>
 
     <link href="../styles/css/login.css" rel="stylesheet">
   </head>
@@ -16,7 +16,7 @@
     <form class="form-signin">
       <div class="text-center mb-4 font-color">
         <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
-        <h1 class="h2 mb-3 font-weight-normal ">Welcome Back!</h1>
+        <h1 class="h2 mb-3 font-weight-normal ">Client Login</h1>
         <p>Log into where each line of code turns into insights and each interaction brings us closer to complete understanding.</p>
       </div>
 
@@ -25,20 +25,22 @@
         <label for="inputEmail">Email address</label>
       </div>
 
-      <div class="form-label-group">
+      <div class="form-label-group mb-4">
         <input type="password" id="inputPassword" class="form-control inputcolor" placeholder="Password" required>
         <label for="inputPassword">Password</label>
       </div>
 
-      <p class="left"> <a href="#">Forgot Password?</a></p>
+      <p class="left"> <a href="resetPassword.html">Forgot Password?</a></p>
 
       <div class="checkbox mb-3 font-color">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
+      <button class="btn btn-lg btn-outline-success btn-block" type="reset">Reset</button>
 
+      <p class="font-color text-center mt-4"> Don't have an account? <a href="joinUs.html"> Sign Up</a></p>
       <p class="mt-4 mb-3 text-muted text-center">&copy; 2022-2024 Markus, Inc</p>
     </form>
   </body>
