--- a/src/views/styles/css/login.css
+++ b/src/views/styles/css/login.css
@@ -50,7 +50,7 @@ body {
   width: 100%;
   margin-bottom: 0; /* Override default `<label>` margin */
   line-height: 1.5;
-  color: #606468;
+  color: #b3b4b3;
   border: 1px solid transparent;
   border-radius: .25rem;
   transition: all .1s ease-in-out;
@@ -79,6 +79,7 @@ body {
 .form-label-group input:not(:placeholder-shown) {
   padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
   padding-bottom: calc(var(--input-padding-y) / 3);
+  color: rgb(178, 179, 180);
 }
 
 .form-label-group input:not(:placeholder-shown) ~ label {
@@ -96,6 +97,7 @@ img {
 
 .btn-primary {
   background-color: rgb(27, 99, 39);
+  border: #202020;
 }
 
 .btn-primary:hover {
@@ -111,5 +113,11 @@ img {
 }
 
 .inputcolor {
-  background-color: #3b3b3b;
+  background-color: #202020;
+  height: 45px;
 }
+
+.alert-warning{
+  font-size: 15px;
+}
+
