--- a/src/views/pages/joinUs.html
+++ b/src/views/pages/joinUs.html
@@ -89,9 +89,9 @@
             </div>
         </div>
       </div>
-      <div style="justify-content: center;">
-        <button class="btn btn-lg btn-success btn-block mt-4" type="submit">Sign up</button>
-        <button class="btn btn-lg btn-outline-success btn-block" type="reset">Reset</button>
+      <div style="display: flex;">
+        <button class="btn btn-lg btn-success btn-block mt-4 mr-2" type="submit">Sign up</button>
+        <button class="btn btn-lg btn-outline-success btn-block mt-4" type="reset">Reset</button>
       </div>
       <p class="font-color text-center mt-4"> Already have an account? <a href="logIn.html">Log In</a></p>
       <p class="mt-4 mb-3 text-muted text-center">&copy; 2022-2024 Markus, Inc</p>
