feat: services and list of experiences

--- a/src/views/pages/home.html
+++ b/src/views/pages/home.html
@@ -59,8 +59,8 @@
             <img class="first-slide" src="../../views/styles/images/companyPictures/cesarEntry.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>One more for good measure.</h1>
-                <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <h1>We're Marcus</h1>
+                <p>A leading performance AI solution that drives guaranteed technology for the world's top brands.</p>
                 <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
               </div>
             </div>
@@ -141,6 +141,39 @@
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
+        <hr class="featurette-divider">
+
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Cargo</th>
+              <th scope="col">Nome</th>
+              <th scope="col">CV</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>CEO</td>
+              <td>Luana</td>
+              <td>Experiencia em ...</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>CTO</td>
+              <td>Marcoantonio</td>
+              <td>Experiencia em ...</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>COO</td>
+              <td>João</td>
+              <td>Experiencia em ...</td>
+            </tr>
+          </tbody>
+        </table>
+
 
         <!-- START THE FEATURETTES -->
 
@@ -156,7 +189,7 @@
                   <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YLLUDwIjD6Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </div>
           </div>
-      </div>
+        </div>
       
 
         <hr class="featurette-divider">
@@ -167,7 +200,9 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <div class="embed-responsive embed-responsive-16by9">
+              <img class="embed-responsive-item" src="https://classic.exame.com/wp-content/uploads/2017/04/mercado-livre-c3a1rea_interna_.jpg?quality=70&strip=info&w=1024" frameborder="0"></iframe>
+            </div>
           </div>
         </div>
 
@@ -179,7 +214,9 @@
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <div class="embed-responsive embed-responsive-16by9">
+              <img class="embed-responsive-item" src="https://www.meupositivo.com.br/panoramapositivo/wp-content/uploads/2018/06/199802-como-montar-a-estrutura-de-ti-da-sua-empresa-1.png" frameborder="0">
+            </div>
           </div>
         </div>
 
@@ -189,16 +226,93 @@
 
       </div><!-- /.container -->
 
+      <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2 border-bottom">Services</h2>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+            </div>
+            <div>
+              <h2>Suporte ao Usuário</h2>
+              <p>Pode ser feito localmente ou por um time remoto e terá como foco resolver problemas rapidamente.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"/></svg>
+            </div>
+            <div>
+              <h2>outsourcing de equipamentos de TI</h2>
+              <p>A empresa faz o aluguel temporário de um conjunto de equipamentos, como computadores, notebooks, tablets, celulares e até mesmo roteadores, para atender a demandas internas.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
+            </div>
+            <div>
+              <h2>gestão de infraestrutura de TI</h2>
+              <p>Uma equipe é contratada para gerenciar todo o parque tecnológico do negócio.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
+            </div>
+            <div>
+              <h2>Suporte ao Usuário</h2>
+              <p>Pode ser feito localmente ou por um time remoto e terá como foco resolver problemas rapidamente.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#cpu-fill"/></svg>
+            </div>
+            <div>
+              <h2>outsourcing de equipamentos de TI</h2>
+              <p>A empresa faz o aluguel temporário de um conjunto de equipamentos, como computadores, notebooks, tablets, celulares e até mesmo roteadores, para atender a demandas internas.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <div class="icon-square bg-light text-dark flex-shrink-0 me-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#tools"/></svg>
+            </div>
+            <div>
+              <h2>gestão de infraestrutura de TI</h2>
+              <p>Uma equipe é contratada para gerenciar todo o parque tecnológico do negócio.</p>
+              <a href="#" class="btn btn-primary">
+                Primary button
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
 
       <!-- FOOTER -->
       <!-- Footer -->
       <footer class="text-center text-lg-start bg-body-tertiary text-muted">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-          <!-- Left -->
-          <div class="me-5 d-none d-lg-block">
-            <span>Get connected with us on social networks:</span>
-          </div>
           <!-- Left -->
 
           <!-- Right -->
@@ -280,8 +394,8 @@
 
         <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-          © 2021 Copyright:
-          <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+          © 2024 Copyright:
+          <a class="text-reset fw-bold">Markus</a>
         </div>
         <!-- Copyright -->
       </footer>
