--- a/src/views/pages/home.html
+++ b/src/views/pages/home.html
@@ -117,6 +117,54 @@
       <div class="container marketing">
 
         <!-- Three columns of text below the carousel -->
+        <!-- START THE FEATURETTES -->
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+              <h2 class="featurette-heading">Saiba como é trabalhar conosco</h2>
+              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          </div>
+          <div class="col-md-5" style="justify-content: center;">
+              <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YLLUDwIjD6Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+          </div>
+        </div>
+      
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <div class="embed-responsive embed-responsive-16by9">
+              <img class="embed-responsive-item" src="https://classic.exame.com/wp-content/uploads/2017/04/mercado-livre-c3a1rea_interna_.jpg?quality=70&strip=info&w=1024" frameborder="0"></iframe>
+            </div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <div class="row featurette">
+          <div class="col-md-7">
+            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
+            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          </div>
+          <div class="col-md-5">
+            <div class="embed-responsive embed-responsive-16by9">
+              <img class="embed-responsive-item" src="https://www.meupositivo.com.br/panoramapositivo/wp-content/uploads/2018/06/199802-como-montar-a-estrutura-de-ti-da-sua-empresa-1.png" frameborder="0">
+            </div>
+          </div>
+        </div>
+
+        <hr class="featurette-divider">
+
+        <!-- /END THE FEATURETTES -->
         <div class="row">
           <div class="col-lg-4">
             <img class="rounded-circle" src="../../views/styles/images/founders/luana.png" alt="Generic placeholder image" width="140" height="140">
@@ -173,56 +221,6 @@
             </tr>
           </tbody>
         </table>
-
-
-        <!-- START THE FEATURETTES -->
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-              <h2 class="featurette-heading">Saiba como é trabalhar conosco</h2>
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5" style="justify-content: center;">
-              <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/YLLUDwIjD6Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </div>
-          </div>
-        </div>
-      
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5 order-md-1">
-            <div class="embed-responsive embed-responsive-16by9">
-              <img class="embed-responsive-item" src="https://classic.exame.com/wp-content/uploads/2017/04/mercado-livre-c3a1rea_interna_.jpg?quality=70&strip=info&w=1024" frameborder="0"></iframe>
-            </div>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
-          </div>
-          <div class="col-md-5">
-            <div class="embed-responsive embed-responsive-16by9">
-              <img class="embed-responsive-item" src="https://www.meupositivo.com.br/panoramapositivo/wp-content/uploads/2018/06/199802-como-montar-a-estrutura-de-ti-da-sua-empresa-1.png" frameborder="0">
-            </div>
-          </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-        <!-- /END THE FEATURETTES -->
 
       </div><!-- /.container -->
 
@@ -341,17 +339,17 @@
         <!-- Section: Social media -->
 
         <!-- Section: Links  -->
-        <section class="">
-          <div class="container text-center text-md-start mt-5">
+        <section class="h-25">
+          <div class="container text-center text-md-start pt-3">
             <!-- Grid row -->
             <div class="row mt-3">
               <!-- Grid column -->
-              <div class="col-lg-2 col-md-12 mb-4 mb-md-0">
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <div data-mdb-ripple-init
                   class="bg-image hover-overlay shadow-1-strong rounded"
-                  data-ripple-color="light"
-                >
-                <img src="../styles/images/markus/logo.png" alt="" srcset="">
+                  data-ripple-color="light"                
+                  >
+                <img src="../styles/images/markus/logo.png" alt="" srcset="" height="70px">
                   <a href="#!">
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
                   </a>
@@ -375,15 +373,19 @@
               <!-- Grid column -->
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                <p><i class="fas fa-home me-3"></i> <p>Rua cais do apolo, 989 - Recife, PE</p></p>
-                <p>
+                <h6 class="text-uppercase fw-bold mb-3">Contact</h6>
+                <p class="m-0">
+                  Rua cais do apolo, 989 - Recife, PE
+                </p>
+                <p class="m-0">
                   Email: <a href="mailto:lvd@cesar.school">lvd@cesar.school</a>
                 </p>
-                <p>
+                <p class="m-0">
                   Whastapp: <a href="mailto:lvd@cesar.school">+55 (81) 99999-8888</a>
                 </p>
-                <p>Urgencia: +55 81 3236-8686</p>
+                <p class="mb-3">
+                  Urgencia: +55 81 3236-8686
+                </p>
               </div>
               <!-- Grid column -->
             </div>
