--- a/src/views/pages/logIn.html
+++ b/src/views/pages/logIn.html
@@ -13,7 +13,8 @@
   </head>
 
   <body>
-    <form class="form-signin">
+    <script src="../scripts/login.js"></script>
+    <form class="form-signin" onsubmit="event.preventDefault(); changePage();">
       <div class="text-center mb-4 font-color">
         <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
         <h1 class="h2 mb-3 font-weight-normal ">Client Login</h1>
