--- a/src/views/pages/logIn.html
+++ b/src/views/pages/logIn.html
@@ -39,7 +39,7 @@
         </label>
       </div>
       <button class="btn btn-lg btn-success btn-block" type="submit">Sign in</button>
-      <button class="btn btn-lg btn-outline-success btn-block" type="reset">Reset</button>
+      <button class="btn btn-lg btn-outline-success btn-block" onclick="clearFields()">Reset</button>
 
       <p class="font-color text-center mt-4"> Don't have an account? <a href="joinUs.html"> Sign Up</a></p>
       <p class="mt-4 mb-3 text-muted text-center">&copy; 2022-2024 Markus, Inc</p>
