--- a/src/views/pages/resetPassword.html
+++ b/src/views/pages/resetPassword.html
@@ -13,7 +13,34 @@
   </head>
 
   <body>
-    <form class="form-signin">
+
+    <!-- Inclusão do jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap Bundle (inclui o Popper) JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+    <script src="../scripts/resetPassword.js"></script>
+
+    <div class="modal fade" id="validationModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLabel">Mensagem de Validação</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Mensagem será inserida aqui -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <form class="form-signin" onsubmit="event.preventDefault(); changePage();">
       <div class="text-center mb-4 font-color">
         <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
         <h1 class="h2 mb-3 font-weight-normal ">Client Reset Password</h1>
@@ -26,11 +53,11 @@
       </div>
 
       <div class="form-label-group mb-4">
-        <input type="password" id="inputPassword" class="form-control inputcolor" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control inputcolor" placeholder="Password" required onchange="validatePassword(this)">
         <label for="inputPassword">New Password</label>
       </div>
       <div class="form-label-group mb-4">
-        <input type="password" id="inputConfirmPassword" class="form-control inputcolor" placeholder="Confirm Password" required>
+        <input type="password" id="inputConfirmPassword" class="form-control inputcolor" placeholder="Confirm Password" required onchange="validateConfirmPassword(this)">
         <label for="inputConfirmPassword">Confirm Password</label>
       </div>
       <div class="alert alert-warning" id="passwordWarning">
@@ -42,6 +69,7 @@
         </ul>
       </div>
       <button class="btn btn-lg btn-success btn-block" type="submit">Change Password</button>
+      <button class="btn btn-lg btn-outline-success btn-block" onclick="clearFields()">Reset</button>
 
 
       <p class="font-color text-center mt-4"> Don't have an account? <a href="joinUs.html"> Sign Up</a></p>
