feat: add data in pages

--- a/src/views/pages/resetPassword.html
+++ b/src/views/pages/resetPassword.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <form class="form-signin" onsubmit="event.preventDefault(); changePage();">
+    <form class="form-signin" onsubmit="event.preventDefault(); resetPassword();">
       <div class="text-center mb-4 font-color">
         <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
         <h1 class="h2 mb-3 font-weight-normal ">Client Reset Password</h1>
