--- a/src/views/pages/itSupport.html
+++ b/src/views/pages/itSupport.html
@@ -15,6 +15,9 @@
   </head>
 
   <body class="bg-light">
+    <script src="./itSupport.html"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <img class="nameSize ml-5" src="../../views/styles/images/markus/markusName.png" alt="">
@@ -108,7 +111,6 @@
           <h4 class="mb-3">New IT Support Request</h4>
           <form class="needs-validation" novalidate>
             <hr class="mb-4">
-
             <div class="d-block my-3">
               <div class="form-row">
                 <div class="form-group col-md-6 mr-3">
