--- a/src/views/pages/logIn.html
+++ b/src/views/pages/logIn.html
@@ -13,8 +13,31 @@
   </head>
 
   <body>
+    <!-- Inclusão do jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bootstrap Bundle (inclui o Popper) JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
     <script src="../scripts/login.js"></script>
-    <form class="form-signin" onsubmit="event.preventDefault(); changePage();">
+    <div class="modal fade" id="validationModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLabel">Mensagem de Validação</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Mensagem será inserida aqui -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalButton">Fechar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <form class="form-signin" onsubmit="event.preventDefault(); login();">
       <div class="text-center mb-4 font-color">
         <img class="mb-4" src="../../views/styles/images/markus/logoMarkusGray.png" alt="" >
         <h1 class="h2 mb-3 font-weight-normal ">Client Login</h1>
